@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-07T00:56:42Z",
-  "count_outdated" : 107,
-  "uniques_outdated" : 21,
+  "timestamp" : "2022-04-10T08:14:29Z",
+  "count_outdated" : 112,
+  "uniques_outdated" : 22,
   "count" : 143,
   "uniques" : 31,
   "views" : [
-    {
-      "timestamp": "2022-03-27T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-03-28T00:00:00Z",
       "count": 12,
