@@ -1,12 +1,7 @@
 {
-  "count": 36,
+  "count": 31,
   "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-03-27T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-28T00:00:00Z",
       "count": 12,
