@@ -1,3 +1,9 @@
+2022-04-10T08:14:29Z:
+* notice: last 14d: all unq: 31 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 107 21 / 143 31
+* notice: next accum: outdated-all outdated-unq / all unq: 112 22 / 143 31
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-07T00:56:42Z:
 * notice: last 14d: all unq: 36 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 105 19 / 141 29
